# animations

bonus-fireworks/: AFirework.cpp  AFirework.h  AFireworksViewer.cpp  AFireworksViewer.h  AParticle.h  AParticleSystem-basecode.cpp  AParticleSystem.h  ARocket-basecode.cpp  ARocket.h  ASpark-basecode.cpp  ASpark.h  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fireworksMain.cpp
bonus-physics/: APhysicsViewer-basecode.cpp  CMakeLists.txt
